# ChessAIv2

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  PLAN.md  README.md  build.md  cpp-style-guide.md  documentation-style-guide.md
.agents/rules/: cpp-style.md  documentation.md
.claude/: settings.json
.githooks/: pre-commit
scripts/: check_cpp_style.py  check_cpp_style.py.md  check_docs_sync.py  check_docs_sync.py.md  match.py  match.py.md  run_checks.py  run_checks.py.md  watch_selfplay.py  watch_selfplay.py.md
src/: bench.cpp  bench.hpp  bench.hpp.md  eval.cpp  eval.hpp  eval.hpp.md  history.cpp  history.hpp  history.hpp.md  main.cpp  main.cpp.md  movepick.cpp  movepick.hpp  movepick.hpp.md  perft.cpp  perft.hpp  perft.hpp.md  search.cpp  search.hpp  search.hpp.md  see.cpp  see.hpp  see.hpp.md  tt.cpp  tt.hpp  tt.hpp.md  types.hpp  types.hpp.md  uci.cpp  uci.hpp  uci.hpp.md
tests/: test_eval.cpp  test_eval.cpp.md  test_history.cpp  test_history.cpp.md  test_main.cpp  test_main.cpp.md  test_movepick.cpp  test_movepick.cpp.md  test_qsearch.cpp  test_qsearch.cpp.md  test_search.cpp  test_search.cpp.md  test_see.cpp  test_see.cpp.md  test_tt.cpp  test_tt.cpp.md
tools/: extract.cpp  extract.cpp.md  tune.cpp  tune.cpp.md
